...
            android:id="@+id/saveButtonu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Save" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Delete"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
